[강진주] docs: update examples and img